--- a/app/src/main/res/layout/fragment_home_short_video.xml
+++ b/app/src/main/res/layout/fragment_home_short_video.xml
@@ -14,7 +14,9 @@
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:overScrollMode="never"
-            android:layout_height="match_parent"></androidx.viewpager.widget.ViewPager>
+            android:layout_height="match_parent">
+
+        </androidx.viewpager.widget.ViewPager>
 
         <RelativeLayout
             android:layout_width="match_parent"
