--- a/tuikit2/src/main/res/layout/audiocall_activity_select_contact.xml
+++ b/tuikit2/src/main/res/layout/audiocall_activity_select_contact.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     tools:context="com.tencent.liteav.SelectContactActivity">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
@@ -40,7 +40,7 @@
             android:text="完成"
             android:textColor="@color/colorWhite"
             android:textSize="16sp" />
-    </android.support.v7.widget.Toolbar>
+    </androidx.appcompat.widget.Toolbar>
 
     <LinearLayout
         android:layout_width="match_parent"
