--- a/ucrop/src/main/res/layout/ucrop_activity_photobox.xml
+++ b/ucrop/src/main/res/layout/ucrop_activity_photobox.xml
@@ -2,7 +2,7 @@
     android:id="@+id/ucrop_photobox"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <!--android.support.v7.widget.Toolbar-->
+    <!--androidx.appcompat.widget.Toolbar-->
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
