--- a/app/src/main/res/layout/activity_invite_history.xml
+++ b/app/src/main/res/layout/activity_invite_history.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_150"
         android:layout_marginLeft="@dimen/dp_15"
@@ -87,7 +87,7 @@
 
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 
     <TextView
