--- a/app/src/main/res/layout/activity_live_push.xml
+++ b/app/src/main/res/layout/activity_live_push.xml
@@ -311,9 +311,9 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="@dimen/dp_15"
             android:src="@mipmap/round_close_icon" />
+        <!--androidx.cardview.widget.CardView-->
 
-
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:id="@+id/rl_pk_status"
             android:layout_width="@dimen/dp_75"
             android:layout_height="@dimen/dp_35"
@@ -343,7 +343,7 @@
                 android:text="匹配中"
                 android:textColor="@color/white"
                 android:textSize="12sp" />
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
     </RelativeLayout>
 
@@ -1095,11 +1095,10 @@
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:scaleType="centerCrop"
-
         app:autoPlay="true"
         app:loopCount="1" />
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/cv_join"
         android:layout_width="@dimen/dp_120"
         android:layout_height="@dimen/dp_170"
@@ -1127,7 +1126,7 @@
             android:layout_marginTop="@dimen/dp_4"
             android:layout_marginRight="@dimen/dp_4"
             android:background="@mipmap/join_close" />
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 
 </RelativeLayout>
