--- a/app/src/main/res/layout/activity_live_push2.xml
+++ b/app/src/main/res/layout/activity_live_push2.xml
@@ -766,7 +766,7 @@
     </LinearLayout>
 
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/cv_join"
         android:layout_width="@dimen/dp_120"
         android:layout_height="@dimen/dp_170"
@@ -794,7 +794,7 @@
             android:layout_marginTop="@dimen/dp_4"
             android:layout_marginRight="@dimen/dp_4"
             android:background="@mipmap/join_close" />
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 
 
