--- a/app/src/main/res/layout/activity_player_vertical2.xml
+++ b/app/src/main/res/layout/activity_player_vertical2.xml
@@ -165,7 +165,7 @@
 
     </RelativeLayout>
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/cv_join"
         android:layout_width="@dimen/dp_120"
         android:layout_height="@dimen/dp_170"
@@ -194,7 +194,7 @@
             android:layout_marginTop="@dimen/dp_4"
             android:layout_marginRight="@dimen/dp_4"
             android:background="@mipmap/join_close" />
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 
 
