--- a/app/src/main/res/layout/activity_publish_short_video.xml
+++ b/app/src/main/res/layout/activity_publish_short_video.xml
@@ -12,7 +12,7 @@
         android:layout_marginLeft="@dimen/dp_15"
         android:layout_marginRight="@dimen/dp_15">
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:id="@+id/cv"
             android:layout_width="@dimen/dp_75"
             android:layout_height="@dimen/dp_100"
@@ -30,7 +30,7 @@
 
            />
 
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
 
 
