--- a/app/src/main/res/layout/activity_user_replay.xml
+++ b/app/src/main/res/layout/activity_user_replay.xml
@@ -75,7 +75,7 @@
             android:orientation="vertical">
 
 
-            <android.support.v4.widget.NestedScrollView
+            <androidx.core.widget.NestedScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fadingEdge="none">
@@ -104,7 +104,7 @@
                         android:divider="@android:color/transparent"
                         android:overScrollMode="never" />
                 </LinearLayout>
-            </android.support.v4.widget.NestedScrollView>
+            </androidx.core.widget.NestedScrollView>
 
         </LinearLayout>
 
