--- a/app/src/main/res/layout/activity_user_trend.xml
+++ b/app/src/main/res/layout/activity_user_trend.xml
@@ -209,8 +209,8 @@
 
 
             </RelativeLayout>
-
-            <android.support.v4.widget.NestedScrollView
+            <!--androidx.core.widget.NestedScrollView-->
+            <androidx.core.widget.NestedScrollView
                 android:layout_width="match_parent"
                 android:fadingEdge="none"
                 android:layout_height="match_parent">
@@ -229,7 +229,7 @@
                         android:divider="@android:color/transparent"
                         android:overScrollMode="never" />
                 </LinearLayout>
-            </android.support.v4.widget.NestedScrollView>
+            </androidx.core.widget.NestedScrollView>
 
         </LinearLayout>
 
