--- a/app/src/main/res/layout/custom_short_popup.xml
+++ b/app/src/main/res/layout/custom_short_popup.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     app:ignore="NamespaceTypo">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/dp_5"
@@ -143,5 +143,5 @@
 
 
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </RelativeLayout>
