--- a/app/src/main/res/layout/custom_trends_popup.xml
+++ b/app/src/main/res/layout/custom_trends_popup.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     app:ignore="NamespaceTypo">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="@dimen/dp_20"
@@ -101,5 +101,5 @@
 
 
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </RelativeLayout>
