--- a/app/src/main/res/layout/home_banner_layout.xml
+++ b/app/src/main/res/layout/home_banner_layout.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/dp_5"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="@dimen/dp_5"
@@ -24,5 +24,5 @@
         app:pointsVisibility="true"
         app:clipChildrenTopBottomMargin="0dp"
         app:pointsPosition="CENTER" />
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </RelativeLayout>
