--- a/app/src/main/res/layout/system_message_item.xml
+++ b/app/src/main/res/layout/system_message_item.xml
@@ -19,7 +19,7 @@
         android:textColor="#989898"
         android:textSize="12sp" />
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_10"
@@ -89,5 +89,5 @@
 
             </LinearLayout>
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
