--- a/app/src/main/res/layout/test_activity.xml
+++ b/app/src/main/res/layout/test_activity.xml
@@ -45,7 +45,7 @@
         android:text="后退" />
 
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/rl_pk_status"
         android:layout_width="@dimen/dp_75"
         android:layout_height="@dimen/dp_37"
@@ -77,5 +77,5 @@
             android:textColor="@color/white"
             android:textSize="12sp" />
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </RelativeLayout>
