--- a/lib_tcsuperplayer/src/main/res/layout/player_quality_popup_view.xml
+++ b/lib_tcsuperplayer/src/main/res/layout/player_quality_popup_view.xml
@@ -20,6 +20,7 @@
         android:layout_height="match_parent"
         android:layout_below="@id/tv_title"
         android:layout_marginTop="50dp"
-        android:choiceMode="singleChoice"></ListView>
+        android:choiceMode="singleChoice">
+    </ListView>
 
 </RelativeLayout>
